register feature & swagger doc
